--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,35 @@
 version: "3.8"
 
 services:
+  reverse-proxy:
+    # The official v2 Traefik docker image
+    image: traefik:v2.2
+    networks:
+      - public
+    # Enables the web UI and tells Traefik to listen to docker
+    command:
+      - "--api.insecure=true"
+      - "--entrypoints.web.address=:80"
+      - "--providers.docker=true"
+    ports:
+      # The HTTP port
+      - "80:80"
+      # The Web UI (enabled by --api.insecure=true)
+      - "8080"
+      - "3000"
+    volumes:
+      # So that Traefik can listen to the Docker events
+      - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      - traefik.http.routers.traefikdashboard.rule=Host(`traefik.localhost`)
+      - "traefik.http.services.traefikdashboard.loadbalancer.server.port=8080"
+
   nexus:
     image: sonatype/nexus3
     networks:
       - public
     ports:
-      - "8081:8081"
+      - "8081"
     volumes:
       - ./nexus-fs:/nexus-data
     labels:
@@ -17,7 +40,7 @@ services:
     networks:
       - public
     ports:
-      - "8082:8080"
+      - "8082"
     volumes:
       - ./jenkins-fs:/var/jenkins_home
     labels:
@@ -32,10 +55,11 @@ services:
       - "POSTGRES_DB=gogs"
     networks:
       - public
+      - internal
     restart: "always"
     ports:
       # Maps tcp port 5432 on service container to the host
-      - "5432:5432"
+      - "5432"
     volumes:
       - "./postgres-fs:/var/lib/postgresql"
 
@@ -44,43 +68,21 @@ services:
     image: gogs/gogs
     networks:
       - public
-    #ports:
-    #  - "10022:22"
-    #  - "10080:3000"
+      - internal
+    ports:
+      - "10022:22"
+      - "3000"
     volumes:
       - ./gogs-fs:/data
     links:
       - postgres
     restart: "always"
     labels:
-      - traefik.http.routers.git.entrypoints=web
       - traefik.http.routers.git.rule=Host(`git.localhost`)
       - traefik.http.services.git-service.loadbalancer.server.port=3000
-
-  reverse-proxy:
-    # The official v2 Traefik docker image
-    image: traefik:v2.2
-    networks:
-      - public
-    # Enables the web UI and tells Traefik to listen to docker
-    command:
-      - "--api.insecure=true"
-      - "--entrypoints.web.address=:80"
-      - "--providers.docker=true"
-
-    ports:
-      # The HTTP port
-      - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
-      - "8080:8080"
-      - "3000:3000"
-    volumes:
-      # So that Traefik can listen to the Docker events
-      - /var/run/docker.sock:/var/run/docker.sock
-    labels:
-      - traefik.http.routers.traefikdashboard.rule=Host(`traefik.localhost`)
-      - "traefik.http.services.traefikdashboard.loadbalancer.server.port=8080"
 
 networks:
   public:
     external: true
+  internal:
+    external: false
